# Range_queries

./: .gitignore  CMakeLists.txt  README-R.md  README.md  answ  contribution_guidelines.md  perf.data  perf.data.old
.github/workflows/: ci.yml
dump/: graph_dump.gv
include/: driver.hpp  iterator.hpp  node.hpp  range_query.hpp  tree.hpp
src/: driver.cpp  main.cpp
tests/end_to_end/: CMakeLists.txt  end_to_end.sh  generator.cpp
tests/end_to_end/answ/: 0.res  1.res  2.res  3.res  4.res  5.res  6.res  7.res  8.res  9.res
tests/unit/: CMakeLists.txt
tests/unit/node/: CMakeLists.txt
tests/unit/node/src/: main.cpp  node.cpp
tests/unit/tree/: CMakeLists.txt
tests/unit/tree/src/: tree.cpp
